--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="middle-container">
     <div class="profile">
       <img class="profile-photo"
-        src="https://scontent.fkul2-2.fna.fbcdn.net/v/t1.18169-9/17361815_10208671591492835_6059273875546683758_n.jpg?_nc_cat=100&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=IHaYbANObMQAX94jMJF&_nc_ht=scontent.fkul2-2.fna&oh=09fab0df18345c83834fdebf59e3f84f&oe=612693DB"
+        src="images/jarrell.JPG"
         alt="profile-photo">
       <h2>Hello.</h2>
       <p class="intro" >I am a Computer Science junior in Arizona State University looking for internship opportunities. I love developing websites and love to mix and produce music in my free time as well.</p>
@@ -53,7 +53,7 @@
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/jarrell-tan-a2b24020a/">LinkedIn</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/jarrelltwe/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <p class="copyright-desc">© 2021 Jarrell Tan.</p>
   </div>
