--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h2>Get In Touch</h2>
       <h3>Want to find out more about me?</h3>
       <p class="contact-desc" >Click on the button below to contact me through my email. I really hope we can work something out!</p>
-      <a class="btn" href="mailto:jarrelltwe@email.com">CONTACT ME</a>
+      <a class="btn" href="mailto:jwtan@asu.edu">CONTACT ME</a>
     </div>
   </div>
 
