--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="software-photo" src="https://image.flaticon.com/icons/png/512/2811/2811152.png" alt="software-photo">
+        <img class="software-photo" src="images/software-photo.png" alt="software-photo">
         <h3>Software Development</h3>
-        <p>Loving computers since I was little, I decided to pursue my degree in Computer Science and have been a software developer with many specializations such as front-end development using ReactJS the most.</p>
+        <p align="justify">Loving computers since I was little, I decided to pursue my degree in Computer Science. I have been a software developer specializing in front-end development using Javascript's framework ReactJS the most. Apart from front-end development, I am also interested in AI and Machine Learning and will certainly look into that into the future.</p>
       </div>
       <div class="skill-row">
-        <img class="audio-photo" src="https://image.flaticon.com/icons/png/512/4345/4345707.png" alt="audio-photo">
+        <img class="audio-photo" src="images/audio-photo.png" alt="audio-photo">
         <h3>Audio Engineering</h3>
-        <p>Apart from being a software developer, I have a major interest in the world of audio engineering. I have mixed and produced for a church in Malaysia called Life Methodist Church Puchong and I have been their Production Manager for the past year.</p>
+        <p align="justify">Apart from being a software developer, I have a major interest in the world of audio engineering. I have mixed and produced for a church in Malaysia called Life Methodist Church Puchong and I have been their Production Manager for the past year.</p>
       </div>
     </div>
     <hr>
