--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>Want to find out more about me?</h3>
-      <p class="contact-desc" >Click on the button below to contact me through my email. I really hope we can work something out!</p>
+      <p align="center" class="contact-desc" >Click on the button below to contact me through my email. I really hope we can work something out!</p>
       <a class="btn" href="mailto:jwtan@asu.edu">CONTACT ME</a>
     </div>
   </div>
 
 
   <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/jarrelltwe/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/jarrelltwe/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/" target="_blank" rel="noopener noreferrer">Twitter</a>
     <p class="copyright-desc">© 2021 Jarrell Tan.</p>
   </div>
 
