added automatic date for copyright

--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/jarrelltwe/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/" target="_blank" rel="noopener noreferrer">Twitter</a>
-    <p class="copyright-desc">© 2021 Jarrell Tan.</p>
+    <p class="copyright-desc"> 
+      © <script>document.write( new Date().getFullYear() );</script> Jarrell Tan.
+    </p>
   </div>
 
 </body>
